--- a/sass/theme/_home-bg.scss
+++ b/sass/theme/_home-bg.scss
@@ -1,10 +1,7 @@
 .demo-layout-transparent {
-  background: url('../images/background/home-banner.png') center / cover;
-}
+  background: url('#{$images-path}/background/home-banner.png') center / cover;
 
-.demo-layout-transparent .mdl-layout__header,
-.demo-layout-transparent .mdl-layout__drawer-button {
-  /* This background is dark, so we set text to white. Use 87% black instead if
-     your background is light. */
-  color: white;
+  .mdl-layout__header, .mdl-layout__drawer-button {
+    color: white;
+  }
 }
